--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.31
   Module::Build: 0.3601
-generated_by: 'Dist::Zilla version 2.100991'
+generated_by: 'Dist::Zilla version 2.101040'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,5 +27,5 @@ requires:
   Plack::Util::Accessor: 0
   parent: 0
 resources:
-  repository: origin
-version: 1.101040
+  repository: http://github.com/pdonelan/Plack-Middleware-Status
+version: 1.101150
